# AI-kernel-OS

./: .gitignore  ALGORITHMS_100PLUS.md  ARCHITECTURE.md  BUILD_STATUS.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING_STANDARDS.md  INSTALL_RUST.sh  INTEGRATION_SUMMARY.md  Makefile  PHILOSOPHY.md  QUICKSTART.md  README.md  README_COMPLETE.md  ROADMAP.md
core/: Cargo.toml
core/src/: lib.rs
drivers/: Cargo.toml
drivers/src/: hardware_abstraction.rs  heterogeneous_compute.rs  lib.rs  performance_counters.rs
drivers/src/reactos_style/: driver_model.rs  mod.rs
intelligence/: Cargo.toml
intelligence/src/: algorithms_part1.rs  algorithms_part2.rs  lib.rs
kernel/: Cargo.toml
kernel/src/: boot.rs  hardware.rs  interrupts.rs  lib.rs  memory.rs
kernel/src/unix_compat/: mod.rs  process.rs
memory/: Cargo.toml
memory/src/: lib.rs
nexus-boot/: Cargo.toml
nexus-boot/src/: main.rs
nexus-userspace/: Cargo.toml
nexus-userspace/src/: lib.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
security/: Cargo.toml
security/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
tools/: Cargo.toml
tools/src/: dashboard.rs  debugger.rs
