[package]
name = "nexus-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-telemetry = { path = "../telemetry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "2.0"

[[bin]]
name = "nexus-dashboard"
path = "src/dashboard.rs"

[[bin]]
name = "nexus-debug"
path = "src/debugger.rs"
